   if the crash db already knows about the crash signature. If so, the report
   will not be uploaded, and instead the user will be directed to the existing
   report URL (if available), similar to bug patterns. The default
   implementation checks this format, if the crash database is initialized with
   a "dupdb_url" option pointing to the exported database.
 - crash-digger: Add --publish-db option to conveniently integrate duplicate DB
   publication (similar to dupdb-admin publish) into retracer setups.
 - launchpad.py: Attach updated stack traces from a duplicate to the master bug
   if it failed retracing previously or has an "apport-request-retrace" tag.
   (LP: #869982)
 - apport-kde, apport-gtk: Support the "Annotation" field for custom dialog
   titles for "Crash" and "Package" problem types as well, not just for
   "Kernel". (LP: #664378)

1.26 (2011-11-11):
------------------
Bug fixes:
 - backends/packaging-apt-dpkg.py: Port to current python-apt API.
 - hookutils.py: Fix path_to_key() to also work with unicode arguments.
 - test/crash: Exit successfully if apport is not enabled in the system. This
   allows packages to run the test suite during build.
 - report.py, add_proc_info(): Correctly handle "python -m <modulename>"
   programs as being interpreted and determine the appropriate module path.
 - Fix some import statements to also work for the system-installed test suite.
 - test/run: Fix testing data/general-hooks/parse_segv.py when called in
   system-installed mode.
 - apport/ui.py: Clean up test .crash file after test cases.
 - Fix tests when running as root.
 - setup.py: Fix crash when "javac -version" fails.
 - README: Update command for one-time enablement.
 - backends/packaging-apt-dpkg.py: Fix interleaving usage of install_packages()
   with other operations such as get_version(), by resetting the apt status
   after building and using the sandbox.
 - report.py test suite: Remove requirement that $USER is set, which makes it