@@ -802,6 +802,62 @@ in a dependent package.' % master,
             bug.lp_save()        
         self._subscribe_triaging_team(bug, report)
 
+    def known(self, report):
+        '''Check if the crash db already knows about the crash signature.
+
+        Check if the report has a DuplicateSignature, crash_signature(), or
+        StacktraceAddressSignature, and ask the database whether the problem is
+        already known. If so, return an URL where the user can check the status
+        or subscribe (if available), or just return True if the report is known
+        but there is no public URL. In that case the report will not be
+        uploaded (i. e. upload() will not be called).
+
+        Return None if the report does not have any signature or the crash
+        database does not support checking for duplicates on the client side.
+
+        The default implementation uses a text file format generated by
+        duplicate_db_publish() at an URL specified by the "dupdb_url" option.
+        Subclasses are free to override this with a custom implementation, such
+        as a real database lookup.
+        '''
+        # we override the method here to check if the user actually has access
+        # to the bug, and if the bug requests more retraces; in either case we
+        # should file it.
+        url = apport.crashdb.CrashDatabase.known(self, report)
+
+        if not url:
+            return url
+
+        # record the fact that it is a duplicate, for triagers
+        report['DuplicateOf'] = url
+
+        try:
+            f = urllib.urlopen(url + '/+text')
+        except IOError:
+            # if we are offline, or LP is down, upload will fail anyway, so we
+            # can just as well avoid the upload
+            return url
+
+        line = f.readline()
+        if not line.startswith('bug:'):
+            # presumably a 404 etc. page, which happens for private bugs; do
+            # file the report then
+            return None
+
+        # check tags
+        for line in f:
+            if line.startswith('tags:'):
+                if 'apport-failed-retrace' in line or 'apport-request-retrace' in line:
+                    return None
+                else:
+                    break
+
+            # stop at the first task, tags are in the first block
+            if not line.strip():
+                break
+
+        return url
+
     def _subscribe_triaging_team(self, bug, report):
         '''Subscribe the right triaging team to the bug.'''
 
